--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
                                     programs of study in: ART HISTORY | ART & VISUAL CULTURE EDUCATION | STUDIO ART.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
-                        <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Apply</button>
-                                <button type="button" class="btn btn-link">Application Deadlines</button>
-                                <button type="button" class="btn btn-link">Art Advising</button>
-                            </div>
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Visit</button>
-                                <button type="button" class="btn btn-link">Portfolio Requirements</button>
-                                <button type="button" class="btn btn-link">Graduate Studies</button>
+                            <div
+                                class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Apply</button>
+                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+                                    <button type="button" class="btn btn-link">Art Advising</button>
+                                </div>
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Visit</button>
+                                    <button type="button" class="btn btn-link">Portfolio Requirements</button>
+                                    <button type="button" class="btn btn-link">Graduate Studies</button>
 
+                                </div>
                             </div>
                         </div>
-                    </div>
 
                     </div>
 
@@ -181,18 +181,18 @@
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
                             <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Apply</button>
-                                <button type="button" class="btn btn-link">Application Deadlines</button>
-                                <button type="button" class="btn btn-link">Dance Advising</button>
+                                class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Apply</button>
+                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+                                    <button type="button" class="btn btn-link">Dance Advising</button>
+                                </div>
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Visit</button>
+                                    <button type="button" class="btn btn-link">Audition Requirements</button>
+                                    <button type="button" class="btn btn-link">Graduate Studies</button>
+                                </div>
                             </div>
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Visit</button>
-                                <button type="button" class="btn btn-link">Audition Requirements</button>
-                                <button type="button" class="btn btn-link">Graduate Studies</button>
-                            </div>
-                        </div>
                         </div>
                     </div>
 
@@ -201,27 +201,29 @@
 
                 <!--Row 2-->
                 <div class="card-deck">
+
                     <!--Music-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
                             <h3 class="text-uppercase">Fred Fox of Music</h3>
                             <div class="card-text">
-                                <p>The Fred Fox School of Music educates musicians as composers, educators, performers, and scholars to build meaningful lives in the arts. </p>
+                                <p>The Fred Fox School of Music educates musicians as composers, educators, performers,
+                                    and scholars to build meaningful lives in the arts. </p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
                             <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Apply</button>
-                                <button type="button" class="btn btn-link">Application Deadlines</button>
-                                <button type="button" class="btn btn-link">Dance Advising</button>
+                                class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Apply</button>
+                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+                                    <button type="button" class="btn btn-link">Music Advising</button>
+                                </div>
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Visit</button>
+                                    <button type="button" class="btn btn-link">Audition Requirements</button>
+                                    <button type="button" class="btn btn-link">Graduate Studies</button>
+                                </div>
                             </div>
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Visit</button>
-                                <button type="button" class="btn btn-link">Audition Requirements</button>
-                                <button type="button" class="btn btn-link">Graduate Studies</button>
-                            </div>
-                        </div>
                         </div>
                     </div>
                     <!--Theatre, Film & Television-->
@@ -229,26 +231,29 @@
                         <div class="card-body">
                             <h3 class="text-uppercase">School of Theatre, Film & Television</h3>
                             <div class="card-text">
-                                <p class="mb-0">We offer comprehensive training in the art and business of storytelling, offered through live theatre and the immersive cinematic experience, for careers in the industry, the arts, and higher education.</p>
+                                <p class="mb-0">We offer comprehensive training in the art and business of storytelling,
+                                    offered through live theatre and the immersive cinematic experience, for careers in
+                                    the industry, the arts, and higher education.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
                             <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Apply</button>
-                                <button type="button" class="btn btn-link">Application Deadlines</button>
-                                <button type="button" class="btn btn-link">Dance Advising</button>
+                                class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Apply</button>
+                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+                                    <button type="button" class="btn btn-link">TFTV Advising</button>
+                                </div>
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-link">Visit</button>
+                                    <button type="button" class="btn btn-link">Audition Requirements</button>
+                                    <button type="button" class="btn btn-link">Graduate Studies</button>
+                                </div>
                             </div>
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button type="button" class="btn btn-link">Visit</button>
-                                <button type="button" class="btn btn-link">Audition Requirements</button>
-                                <button type="button" class="btn btn-link">Graduate Studies</button>
-                            </div>
-                        </div>
                         </div>
                     </div>
 
                 </div>
+
             </div>
         </div>
         <br />
@@ -278,7 +283,7 @@
                                         data-toggle="list" href="#list-ccp" role="tab" aria-controls="ccp">Center for
                                         Creative Photography</a>
                                     <a class="list-group-item list-group-item-action" id="list-uama-list"
-                                        data-toggle="list" href="#list-uama" role="tab" aria-controls="uama">UA Museum
+                                        data-toggle="list" href="#list-uama" role="tab" aria-controls="uama">Museum
                                         of Art</a>
                                     <a class="list-group-item list-group-item-action" id="list-arizonaArtsLive-list"
                                         data-toggle="list" href="#list-arizonaArtsLive" role="tab"
@@ -318,12 +323,12 @@
                                         aria-labelledby="list-arizonaArtsInSchools-list">Arizona Arts in Schools
                                         programs are based on a co-teaching and operations model established by Lead
                                         Guitar, an independent 501(c)3 that works in affiliation with the University of
-                                        Arizona. Lead Guitar and its sister programs–UpBeat (hand drumming), Step Up
-                                        (dance), and Music First (early childhood music)–build sustainable arts programs
+                                        Arizona. Lead Guitar and its sister programs UpBeat (hand drumming), Step Up
+                                        (dance), and Music First (early childhood music) build sustainable arts programs
                                         in partnership with public schools and their staff by pairing a master arts
                                         instructor (often UA graduate students or alumni) with a certified teacher
                                         already employed by the school. This has the effect of increasing a certified
-                                        teacher’s job security by adding hours to their schedule and new skills to their
+                                        teacher's job security by adding hours to their schedule and new skills to their
                                         resume.
                                         <br>
                                         <a class="btn btn-sm btn-danger" target="_blank"
@@ -342,11 +347,37 @@
                                             More >></a>
                                     </div>
                                     <div class="tab-pane fade" id="list-uama" role="tabpanel"
-                                        aria-labelledby="list-uama-list">uama</div>
+                                        aria-labelledby="list-uama-list">The University of Arizona Museum of Art
+                                        advances the academic and research mission of the University, inspires critical
+                                        dialogue among campus and community audiences, and celebrates art as essential
+                                        to our lives through the stewardship and interpretation of its expanding
+                                        collection of art and archives.
+                                        <br>
+                                        <a class="btn btn-sm btn-danger" target="_blank"
+                                            href="https://artmuseum.arizona.edu/">Learn
+                                            More >></a>
+                                    </div>
                                     <div class="tab-pane fade" id="list-arizonaArtsLive" role="tabpanel"
-                                        aria-labelledby="list-arizonaArtsLive-list">arizonaArtsLive</div>
+                                        aria-labelledby="list-arizonaArtsLive-list">Arizona Arts is a unified gateway to
+                                        our unique visual and performing arts assets, experiences, and educational
+                                        programs. Arizona Arts brings together the highly-regarded academic programs of
+                                        the College of Fine Arts with world-renowned offerings from Arizona Arts Live,
+                                        Arizona Arts in Schools, Center of Creative Photography, and the Museum of Art.
+                                        This new division aims to bring the transformative power of the arts to all
+                                        through an accessible platform for finding new and engaging arts experiences.
+                                        <br>
+                                        <a class="btn btn-sm btn-danger" target="_blank"
+                                            href="https://arizonaartslive.com/">Learn
+                                            More >></a>
+                                    </div>
                                     <div class="tab-pane fade" id="list-newsletter" role="tabpanel"
-                                        aria-labelledby="list-newsletter-list">newsletter</div>
+                                        aria-labelledby="list-newsletter-list">Sign up for Arizona Arts updates!
+                                        Events, stories, photos, videos about students, faculty, alumni...
+                                        <br>
+                                        <a class="btn btn-sm btn-danger" target="_blank"
+                                            href="https://lp.constantcontactpages.com/su/rNn6rhB/cfa">Learn
+                                            More >></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -386,7 +417,7 @@
                                     width="225" height="400" style="border:none;overflow:hidden" scrolling="no"
                                     frameborder="0" allowfullscreen="true"
                                     allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
+                            </span>
                         </div>
                     </div>
                 </div>
